--- a/src/style/LightStyle.qss
+++ b/src/style/LightStyle.qss
@@ -4,6 +4,7 @@ QWidget {
     font-size: 18px; }
 
 QPushButton#btn_add_card {
+    border: 1px solid rgb(144, 164, 174);
     padding: 0px;
     border-radius: 19px;
 }
@@ -16,7 +17,8 @@ QPushButton#btn_add_card:hover {
 QPushButton {
     padding: 5px 10px 5px 10px;
     border-radius: 10px;
-    background-color: rgb(227, 232, 234);
+    border: 1px solid rgb(144, 164, 174);
+    background-color: rgb(236, 239, 241);
 }
 
 QPushButton:hover {
