--- a/src/style/LightStyle.qss
+++ b/src/style/LightStyle.qss
@@ -1,7 +1,13 @@
 QWidget { 
     background-color: rgb(236, 239, 241);
     font-family: 'Microsoft YaHei'; 
-    font-size: 18px; }
+    font-size: 18px; 
+}
+
+QWidget#statusBar {
+    border-radius: 10px;
+    border: 1px solid rgb(144, 164, 174);
+}
 
 QPushButton#btn_add_card {
     border: 1px solid rgb(144, 164, 174);
@@ -10,7 +16,7 @@ QPushButton#btn_add_card {
 }
 
 QPushButton#btn_add_card:hover {
-    padding: 5px 10px 8px 10px;
+    padding: 0px 0px 2px 0px;
     background-color: rgb(199, 208, 211);
 }
 
@@ -37,7 +43,7 @@ QPushButton:pressed {
 
 QToolButton {
     padding: 5px 10px 5px 10px;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: rgb(236, 239, 241);
     border: none;
 }
@@ -123,8 +129,6 @@ QComboBox QAbstractItemView::item:hover {
 
 QComboBox:hover {
     background-color: rgb(207, 216, 220);
-    border: 1px solid rgb(100, 100, 100);
-    border-radius: 5px;
     padding-left: 5px;
 }
 
